2nd training/Community/Community/Community1/force-app/main/default/objects/Transport_Sea_Instruction__c/Transport_Sea_Instruction__c.object-meta.xml
<CustomObject>
    <label>Transporter Instruction (Sea)</label>
    <nameField>
        <displayFormat>TIS{YY}{MM}{DD}-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transporter Instructions (Sea)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>