2nd training/Community/Community/Community1/force-app/main/default/objects/Transport_Sea_Instruction__c/fields/ATTN__c.field-meta.xml
<CustomField>
    <fullName>ATTN__c</fullName>
    <label>ATTN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>