2nd training/Community/Community/Community1/force-app/main/default/objects/Transport_Sea_Instruction__c/fields/Collect_From__c.field-meta.xml
<CustomField>
    <fullName>Collect_From__c</fullName>
    <label>Collect From</label>
    <type>TextArea</type>
</CustomField>