2nd training/Community/Community/Community1/force-app/main/default/objects/Transport_Sea_Instruction__c/fields/Collection_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Collection_Delivery_Date__c</fullName>
    <label>Collection/Delivery Date</label>
    <type>Date</type>
</CustomField>