2nd training/Community/Community/Community1/force-app/main/default/objects/Transport_Sea_Instruction__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Client</label>
    <length>40</length>
    <type>Text</type>
</CustomField>