2nd training/Community/Community/Community1/force-app/main/default/objects/Transport_Sea_Instruction__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>