2nd training/Community/Community/Community1/force-app/main/default/objects/Transport_Sea_Instruction__c/fields/Delivery_To__c.field-meta.xml
<CustomField>
    <fullName>Delivery_To__c</fullName>
    <label>Deliver To</label>
    <type>TextArea</type>
</CustomField>