2nd training/Community/Community/Community1/force-app/main/default/objects/Transport_Sea_Instruction__c/fields/Measurement__c.field-meta.xml
<CustomField>
    <fullName>Measurement__c</fullName>
    <label>Dimensions (cm)</label>
    <length>350</length>
    <type>LongTextArea</type>
</CustomField>