2nd training/Community/Community/Community1/force-app/main/default/objects/Transport_Sea_Instruction__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Transporter Instructions (Sea)</relationshipLabel>
    <relationshipName>Transporter_Instructions_Sea</relationshipName>
    <type>Lookup</type>
</CustomField>