2nd training/Community/Community/Community1/force-app/main/default/objects/Transport_Sea_Instruction__c/fields/Vessel_Voyage__c.field-meta.xml
<CustomField>
    <fullName>Vessel_Voyage__c</fullName>
    <label>Vessel/Voyage</label>
    <length>40</length>
    <type>Text</type>
</CustomField>