2nd training/Community/Community/Community1/force-app/main/default/objects/Transport_Sea_Instruction__c/fields/Weight_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Weight_Measurement__c</fullName>
    <label>Weight (kg)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>